feat/refactor/build: resto migração para maven, organização das pastas, testes com Junit